Archive2/d5/33779569a89e0e/output
main.cpp: In function 'int main()':
main.cpp:10:63: error: 'end1' was not declared in this scope
     cout << "Please input the g(n) you wish to find for n" << end1;
                                                               ^
main.cpp:11:12: error: unable to find numeric literal operator 'operator""n'
     cin >> 5n;
            ^
main.cpp:11:12: note: use -std=gnu++11 or -fext-numeric-literals to enable more built-in suffixes
